fix: disable tyrian view because logs complain
Signed-off-by: Jesse Simpson <jesse.simpson36@gmail.com>

--- a/master.cfg
+++ b/master.cfg
@@ -117,7 +117,7 @@ c['www'] = {
             'plugins': { 'waterfall_view': True,
                          'console_view': True,
                          'grid_view': True,
-                         'tyrian_view': True }
+                         'tyrian_view': False }
 }
 c['www']['authz'] = util.Authz(
     allowRules=[
