--- a/master.cfg
+++ b/master.cfg
@@ -116,8 +116,7 @@ c['www'] = {
             'port': 8010,
             'plugins': { 'waterfall_view': True,
                          'console_view': True,
-                         'grid_view': True,
-                         'tyrian_view': False }
+                         'grid_view': True }
 }
 c['www']['authz'] = util.Authz(
     allowRules=[
